--- a/GrandadAudioPlayer/Views/PlaylistControlsView.xaml
+++ b/GrandadAudioPlayer/Views/PlaylistControlsView.xaml
@@ -29,21 +29,21 @@
                 <TextBlock Grid.Row="1" Margin="5" Style="{DynamicResource MaterialDesignSubheadingTextBlock}">
                     <TextBlock.Text>
                         <MultiBinding StringFormat="File: {0}">
-                            <Binding Path="PlaylistManager.CurrentItem.Name"></Binding>
+                            <Binding Path="PlaylistManager.CurrentItem.Name"/>
                         </MultiBinding>
                     </TextBlock.Text>
                 </TextBlock>
                 <TextBlock Grid.Row="2" Margin="5" Style="{DynamicResource MaterialDesignSubheadingTextBlock}">
                     <TextBlock.Text>
                         <MultiBinding StringFormat="Title: {0}">
-                            <Binding Path="PlaylistManager.CurrentItem.Id3Tags.Title"></Binding>
+                            <Binding Path="PlaylistManager.CurrentItem.Id3Tags.Title" />
                         </MultiBinding>
                     </TextBlock.Text>
                 </TextBlock>
                 <TextBlock Grid.Row="3" Margin="5" Style="{DynamicResource MaterialDesignSubheadingTextBlock}">
                     <TextBlock.Text>
                         <MultiBinding StringFormat="Album: {0}">
-                            <Binding Path="PlaylistManager.CurrentItem.Id3Tags.Album"></Binding>
+                            <Binding Path="PlaylistManager.CurrentItem.Id3Tags.Album" />
                         </MultiBinding>
                     </TextBlock.Text>
                 </TextBlock>
@@ -54,8 +54,8 @@
                         <ColumnDefinition Width="*"></ColumnDefinition>
                     </Grid.ColumnDefinitions>
                     <TextBlock Grid.Column="0" Margin="5" Text="Position:" Style="{DynamicResource MaterialDesignSubheadingTextBlock}"/>
-                    <ProgressBar Grid.Column="1" Value="{Binding PlaylistManager.PositionPercentage, Mode=OneWay}" Height="15" />
-                    <TextBlock Grid.Column="2" Margin="5" Style="{DynamicResource MaterialDesignSubheadingTextBlock}" Text="{Binding PlaylistManager.Position}" />
+                    <ProgressBar Grid.Column="1" Value="{Binding PositionPercentage, Mode=OneWay}" Height="15" />
+                    <TextBlock Grid.Column="2" Margin="5" Style="{DynamicResource MaterialDesignSubheadingTextBlock}" Text="{Binding Position}" />
                 </Grid>
             </Grid>
         </md:Card>
@@ -99,15 +99,20 @@
                 </StackPanel>
                 <Grid Grid.Row="1">
                     <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="2*"></ColumnDefinition>
+                        <ColumnDefinition Width="8*"></ColumnDefinition>
                         <ColumnDefinition Width="*"></ColumnDefinition>
-                        <ColumnDefinition Width="4*"></ColumnDefinition>
                     </Grid.ColumnDefinitions>
                     <TextBlock Grid.Column="0" Style="{DynamicResource MaterialDesignTitleTextBlock}">Volume:</TextBlock>
-                    <Slider Grid.Column="1"
-                Margin ="5"
-                Minimum="0" Maximum="100" Style="{DynamicResource MaterialDesignSlider}" Value="{Binding Volume}"
-                TickFrequency="5" 
-                ></Slider>
+                    <Slider Grid.Column="1" Margin ="5" Minimum="0" Maximum="100" Style="{DynamicResource MaterialDesignSlider}" 
+                            Value="{Binding PlaylistManager.Volume}" TickFrequency="5" />
+                    <TextBlock Grid.Column="2" Style="{DynamicResource MaterialDesignTitleTextBlock}">
+                        <TextBlock.Text>
+                            <MultiBinding StringFormat=" {0} %">
+                                <Binding Path="PlaylistManager.Volume" Mode="OneWay" />
+                            </MultiBinding>
+                        </TextBlock.Text>
+                    </TextBlock>
                 </Grid>
             </Grid>
         </md:Card>
