--- a/GrandadAudioPlayer/Views/AdminView.xaml
+++ b/GrandadAudioPlayer/Views/AdminView.xaml
@@ -5,6 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:prism="http://prismlibrary.com/"
              xmlns:md="http://materialdesigninxaml.net/winfx/xaml/themes"
+             xmlns:b="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
              prism:ViewModelLocator.AutoWireViewModel="True"
              mc:Ignorable="d" 
              TextElement.Foreground="{DynamicResource MaterialDesignBody}"
@@ -30,19 +31,29 @@
             <ColumnDefinition Width="*"></ColumnDefinition>
         </Grid.ColumnDefinitions>
         <TextBox Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3" Margin="10,0" Padding="0,5,0,0" 
-                 md:HintAssist.Hint="Music Directory:"
+                 md:HintAssist.Hint="Music Directory: (Read only - use file dialog to change)"
                  md:HintAssist.FloatingOffset="0, -24"
                  Text="{Binding FolderPath}" Style="{StaticResource MaterialDesignFloatingHintTextBox}"
-                 IsReadOnly="True" FontSize="18"/>
+                 IsReadOnly="True" FontSize="18" IsTabStop="False" Focusable="False">
+            <b:Interaction.Triggers>
+                <b:EventTrigger EventName="MouseLeftButtonDown">
+                    <b:InvokeCommandAction Command="{Binding OpenFileDialogCommand}"></b:InvokeCommandAction>
+                </b:EventTrigger>
+            </b:Interaction.Triggers>
+        </TextBox>
         <Button Grid.Row="1" Grid.Column="2" Command="{Binding OpenFileDialogCommand}" Content="Open File Dialog" Margin="10,10,10,0" Width="160"/>
         <TextBox Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="3" Margin="10,0,10,5" 
                  Style="{StaticResource MaterialDesignFloatingHintTextBox}"
                  md:HintAssist.Hint="Allowed Extensions - Comma Separated (no spaces)" 
                  md:HintAssist.FloatingOffset="0,-24"
-                 Text="{Binding AllowedExtensions}" FontSize="18"></TextBox>
-        <Label Grid.Row="3" Grid.Column="0" Content="{Binding FeedbackMessage}" HorizontalAlignment="Left" Margin="0,10,0,0"></Label>
-        <Button Grid.Row="3" Grid.Column="1" Command="{Binding LoadConfigurationCommand}" Content="Load Configuration" Width="160"/>
-        <Button Grid.Row="3" Grid.Column="2" Command="{Binding SaveConfigurationCommand}" Content="Save Configuration" Width="160"/>
+                 Text="{Binding AllowedExtensions}" FontSize="18">
+            <b:Interaction.Triggers>
+                <b:EventTrigger EventName="LostFocus">
+                    <b:InvokeCommandAction Command="{Binding SaveConfigurationCommand}"></b:InvokeCommandAction>
+                </b:EventTrigger>
+            </b:Interaction.Triggers>
+        </TextBox>
+        <Label Grid.Row="4" Grid.Column="0" Content="{Binding FeedbackMessage}" HorizontalAlignment="Left" Margin="0,10,0,0"></Label>
         <Button Grid.Row="4" Grid.Column="2" Command="{x:Static md:DialogHost.CloseDialogCommand}" Content="Close Admin Window" Margin="0,10,0,0"></Button>
         <TextBlock 
             Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2" 
