--- a/GrandadAudioPlayer/Views/AdminView.xaml
+++ b/GrandadAudioPlayer/Views/AdminView.xaml
@@ -53,6 +53,11 @@
                 </b:EventTrigger>
             </b:Interaction.Triggers>
         </TextBox>
+        <StackPanel Grid.Row="3" Grid.ColumnSpan="3" Margin="10" Orientation="Horizontal">
+            <CheckBox Style="{StaticResource MaterialDesignCheckBox}" IsChecked="{Binding ForceUpdate}">
+                Automatically restart app on update
+            </CheckBox>
+        </StackPanel>
         <Label Grid.Row="4" Grid.Column="0" Content="{Binding FeedbackMessage}" HorizontalAlignment="Left" Margin="0,10,0,0"></Label>
         <Button Grid.Row="4" Grid.Column="2" Command="{x:Static md:DialogHost.CloseDialogCommand}" Content="Close Admin Window" Margin="0,10,0,0"></Button>
         <TextBlock 
