--- a/GrandadAudioPlayer/Views/AdminView.xaml
+++ b/GrandadAudioPlayer/Views/AdminView.xaml
@@ -46,7 +46,7 @@
                  Style="{StaticResource MaterialDesignFloatingHintTextBox}"
                  md:HintAssist.Hint="Allowed Extensions - Comma Separated (no spaces)" 
                  md:HintAssist.FloatingOffset="0,-24"
-                 Text="{Binding AllowedExtensions}" FontSize="18">
+                 Text="{Binding AllowedExtensions, ValidatesOnNotifyDataErrors=True}" FontSize="18">
             <b:Interaction.Triggers>
                 <b:EventTrigger EventName="LostFocus">
                     <b:InvokeCommandAction Command="{Binding SaveConfigurationCommand}"></b:InvokeCommandAction>
