--- a/GrandadAudioPlayer/Views/AdminView.xaml
+++ b/GrandadAudioPlayer/Views/AdminView.xaml
@@ -8,13 +8,7 @@
              xmlns:b="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
              prism:ViewModelLocator.AutoWireViewModel="True"
              mc:Ignorable="d" 
-             TextElement.Foreground="{DynamicResource MaterialDesignBody}"
-             TextElement.FontWeight="Regular"
-             TextElement.FontSize="13"
-             TextOptions.TextFormattingMode="Ideal" 
-             TextOptions.TextRenderingMode="Auto"
-             Background="{DynamicResource MaterialDesignPaper}"
-             FontFamily="{StaticResource MaterialDesignFont}"
+             
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid HorizontalAlignment="Left" Margin="10"  Width="919" Height="auto" VerticalAlignment="Top">
         <Grid.RowDefinitions>
@@ -59,7 +53,7 @@
             </CheckBox>
         </StackPanel>
         <Label Grid.Row="4" Grid.Column="0" Content="{Binding FeedbackMessage}" HorizontalAlignment="Left" Margin="0,10,0,0"></Label>
-        <Button Grid.Row="4" Grid.Column="2" Command="{x:Static md:DialogHost.CloseDialogCommand}" Content="Close Admin Window" Margin="0,10,0,0"></Button>
+        <Button Grid.Row="4" Grid.Column="2" Command="{Binding CloseAdminViewCommand}" Style="{StaticResource MaterialDesignRaisedButton}" Content="Close Admin Window" Margin="0,10,0,0"></Button>
         <TextBlock 
             Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2" 
             HorizontalAlignment="Center" VerticalAlignment="Center" Style="{DynamicResource MaterialDesignSubheadingTextBlock}"
